tests/baselines/reference/parserConstructorAmbiguity3.errors.txt
==== tests/cases/compiler/parserConstructorAmbiguity3.ts (2 errors) ====
    new Date<A>
               
!!! parserConstructorAmbiguity3.ts(1,12): error TS1109: Expression expected.
             ~
!!! parserConstructorAmbiguity3.ts(1,10): error TS2095: Cannot find name 'A'.